# android_kernel_zuoyebang_zpd1203

./: .gitignore  BUILD.bazel  Kconfig  Kconfig.msm  Makefile  OWNERS  README.md  annibale.bzl  avb_boot_img.bzl  bixi.bzl  blair.bzl  build.config.msm.haotian  build.config.msm.luming  build.config.msm.pandora  build.config.msm.perf  build.config.msm.spring  build.targets  build_with_bazel.py  dada.bzl  files_gki_aarch64.txt  haotian.bzl  image_opts.bzl  luming.bzl  miro.bzl  modules.bzl  modules.list.msm.annibale  modules.list.msm.bixi  modules.list.msm.blair  modules.list.msm.dada  modules.list.msm.haotian  modules.list.msm.luming  modules.list.msm.miro  modules.list.msm.piano  modules.list.msm.spring  modules.list.msm.sun  modules.list.msm.xuanyuan  modules.list.msm.yupei  modules_unprotected.bzl  monaco.bzl  msm_kernel_la.bzl  (+12 more)
xring-configs/: BUILD.bazel  fstab.O1_asic  img_common_cfg.bzl  xring_ate_defconfig  xring_fuzz_defconfig  xring_kasan_defconfig  xring_slt_defconfig
xring-configs/O1/: BUILD.bazel  O1_eng_defconfig  O1_gki.fragment  build.config.O1.aarch64  build.config.O1_dtb.aarch64  dtboimg.cfg  recovery_modules.xring_O1  system_dlkm_blocklist.xring_O1  vendor_boot_modules.xring_O1  vendor_boot_modules_eng.xring_O1  vendor_dlkm_blocklist.xring_O1  vendor_dlkm_modules.xring_O1  vendor_dlkm_modules_eng.xring_O1
xring-configs/xiaomi/: BUILD.bazel  userdebug_plat_sepolicy.cil  xiaomi_deconfig.common
xring-configs/xiaomi/dijun/: BUILD.bazel  force_debuggable  vendor_boot_modules.dijun  vendor_dlkm_modules.dijun  xiaomi_deconfig.dijun
xring-configs/xiaomi/jinghu/: BUILD.bazel  adb_debug.prop  userdebug_plat_sepolicy.cil  vendor_boot_modules.jinghu  vendor_dlkm_blocklist.jinghu  vendor_dlkm_modules.jinghu  xiaomi_deconfig.jinghu
xring-dts/O1/: BUILD.bazel  Makefile
xring-dts/O1/panel/: dsi_panel_k81_42_02_0a_on_common.dtsi  dsi_panel_k81_42_02_0a_video.dtsi  dsi_panel_kd035_no_dsc_video_fpga.dtsi  dsi_panel_m1_42_02_0a_dsc_cmd.dtsi  dsi_panel_m1_42_02_0a_dsc_cmd_60hz.dtsi  dsi_panel_m1_42_02_0a_dsc_cmd_dsi_on_common.dtsi  dsi_panel_m1_42_02_0a_dsc_cmd_fpga.dtsi  dsi_panel_m1_42_02_0a_no_dsc_cmd.dtsi  dsi_panel_m1_42_02_0a_no_dsc_cmd_fpga.dtsi  dsi_panel_m81_42_02_0b_dualdsi_dsc_lcd_video.dtsi  dsi_panel_m81_42_02_0b_on_common.dtsi  dsi_panel_n16_42_02_0b_dsc_vid.dtsi  dsi_panel_o2s_42_02_0a_dsc_cmd.dtsi  dsi_panel_o2s_42_02_0a_dsc_cmd_common.dtsi  dsi_panel_o2s_42_02_0a_dsc_cmd_on_common.dtsi  dsi_panel_o80_42_02_0a_p1_dualdsi_dsc_cmd.dtsi  dsi_panel_o80_42_02_0a_p1_dualdsi_dsc_cmd_common.dtsi  dsi_panel_o80_42_02_0a_p1_dualdsi_dsc_cmd_on_common.dtsi  dsi_panel_o80_42_02_0a_p2_dualdsi_dsc_cmd.dtsi  dsi_panel_o80_42_02_0a_p2_dualdsi_dsc_cmd_common.dtsi  dsi_panel_o80_42_02_0a_p2_dualdsi_dsc_cmd_on_common.dtsi  dsi_panel_o80_42_02_0a_p3_dualdsi_dsc_cmd.dtsi  dsi_panel_o80_42_02_0a_p3_dualdsi_dsc_cmd_common.dtsi  dsi_panel_o80_42_02_0a_p3_dualdsi_dsc_cmd_on_common.dtsi  fake_dsi_panel.dtsi
xring-dts/O1/soc/: O1.dtsi  O1_audio.dtsi  O1_basic.dts  O1_bt.dtsi  O1_camera.dtsi  O1_clock.dtsi  O1_coresight.dtsi  O1_cpu.dtsi  O1_ddr_devfreq.dtsi  O1_ddr_flux.dtsi  O1_ddr_info.dtsi  O1_ddr_vote_dev.dtsi  O1_debug.dtsi  O1_display.dtsi  O1_dmac.dtsi  O1_doze_vote.dtsi  O1_dvfs_gov.dtsi  O1_gic.dtsi  O1_gpu.dtsi  O1_gpufreq.dtsi  O1_hpc.dtsi  O1_i2c.dtsi  O1_ipc.dtsi  O1_l3_devfreq.dtsi  O1_lpctrl.dtsi  O1_media_dvfs.dtsi  O1_mitee.dtsi  O1_mmc.dtsi  O1_mpam.dtsi  O1_noc.dtsi  O1_npu_freq.dtsi  O1_ocm.dtsi  O1_pcie.dtsi  O1_peri_dvfs.dtsi  O1_pinctrl.dtsi  O1_pm_comm.dtsi  O1_pmic.dtsi  O1_regulator.dtsi  O1_reserved_memory.dtsi  O1_reset.dtsi  (+13 more)
xring-modules/: .gitignore  BUILD.bazel  Kbuild  Kconfig.ext  Makefile  O1.bzl  define_ext_modules.bzl  image_opts.bzl  modules_list.bzl  xring_kernel_single.bzl  xring_soc_type.bzl
xring-modules/drivers/: Kbuild  Kconfig
xring-modules/drivers/ab_slot/: Kbuild  Kconfig  ab_slot_bootable_ctrl.c
xring-modules/drivers/atf_mdr/: Kbuild  Kconfig  atf_mdr.c
xring-modules/drivers/atf_shmem/: Kbuild  Kconfig  atf_shmem.c  atf_shmem_test.c
xring-modules/drivers/audio/: Kbuild  Kconfig  fk_audio.c
xring-modules/drivers/bootup_track/: Kbuild  Kconfig  bootup_track_stage1.c  bootup_track_stage2.c
xring-modules/drivers/camera/: Kbuild  Kconfig  xrisp_top.c  xrisp_top.h
xring-modules/drivers/clk/: Kbuild  Kconfig  clk.c  clk.h  xr-clk-common.c  xr-clk-common.h  xr-clk-divider.c  xr-clk-divider.h  xr-clk-dvfs.c  xr-clk-dvfs.h  xr-clk-fast-dfs.c  xr-clk-fast-dfs.h  xr-clk-fixed-rate.c  xr-clk-fixed-rate.h  xr-clk-gate.c  xr-clk-gate.h  xr-clk-mux.c  xr-clk-mux.h  xr-clk-pll.c  xr-clk-pll.h  xr-clk-pm-monitor.c  xr-clk-pm-monitor.h  xr-clk-pmu.c  xr-clk-pmu.h  xr-clk-scgate.c  xr-clk-scgate.h  xr-dvfs-private.h  xr-dvfs-vote.c  xr-dvfs-vote.h
xring-modules/drivers/coresight/: Kbuild  Kconfig  coresight-tmc-core.c  coresight-tmc-etf.c  coresight-tmc-etr.c  coresight-tmc.h  coresight_etr_config.c
xring-modules/drivers/cpnv/: cpnv.h
xring-modules/drivers/cpu_sched/: Kbuild  Kconfig
xring-modules/drivers/cpufreq/: Kbuild  Kconfig  cpu_stats.c  cpufreq_xres.c  cpufreq_xres.h  xr_cpufreq-hw.c  xr_cpufreq.h  xr_cpufreq_qos.c  xr_trace.h  xres_trace.h
xring-modules/helloworld/: Kbuild  Kconfig  hello.c
xring-modules/helloworld_dep/: Kbuild  Kconfig  hello_dep.c
xring-modules/hungtask_demo/: Kbuild  Kconfig  hungtask_demo.c
xring-modules/kdump_demo/: Kbuild  Kconfig  oops_demo.c  rcu_demo.c
xring-modules/secure/: Kbuild
xring-modules/softlockup_demo/: Kbuild  Kconfig  softlockup_demo.c
xring-modules/switch/: Kbuild  Kconfig  fsa4480-i2c.c
xring-modules/vendor_hook_demo/: Kbuild  vendor_hook_demo.c
xring-modules/xring-hook/: Kconfig
xring-modules/xring_ramdisk/: Kbuild  Kconfig  xring_ramdisk.c
xring-modules/xring_ubsan_dfx/: Kbuild  xring_ubsan_dfx.c
xring-uapi/: BUILD.bazel  xr_coul.h
xring-uapi/display/: xring_dpu_color.h  xring_dpu_drm.h  xring_stripe_common.h  xring_veu.h  xring_xplayer_uapi.h
xring-uapi/memory/: xring_meminfo.h  xring_memory_track.h
xring-uapi/xr_dmabuf_helper/: xr_dmabuf_helper.h
(+4147 files in other folders)
