package(
    default_visibility = [
        "//visibility:public",
    ],
)
filegroup(
    name = "xring_uapi",
    srcs = glob(
                ["**"],
                exclude = [
                    "BUILD.bazel",
                    "**/*.bzl",
                    ".git/**",
                ],
            ),
    visibility = ["//visibility:public",],
)
