package(
    default_visibility = [
        "//visibility:public",
    ],
)
filegroup(
    name = "xring_O1_configs",
    srcs = glob(
                ["**"],
                exclude = [
                    "BUILD.bazel",
                    "**/*.bzl",
                    ".git/**",
                ],
            ),
    visibility = ["//visibility:public",],
)
