load("//build/kernel/kleaf:kernel.bzl", "kernel_dtstree")

kernel_dtstree(
    name = "O1_dt",
    srcs = glob(
        [
            "Makefile",
            "**/*.dtsi",
            "**/*.dts",
            "**/*.dtso",
        ],
    ) + [
        "//xring-modules:xring_dt-bindings",
    ] ,
    visibility = [
         "//visibility:public",
    ],
)