package(
    default_visibility = [
        "//visibility:public",
    ],
)
filegroup(
    name = "xiaomi_dijun_configs",
    srcs = glob(
                ["**"],
                exclude = [
                    "BUILD.bazel",
                    "**/*.bzl",
                    ".git/**",
                ],
            ),
    visibility = ["//visibility:public",],
)
