load("//xring-modules:define_ext_modules.bzl", "define_ext_module")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

filegroup(
    name = "headers",
    srcs = glob([
        "**/*.h",
    ]),
)

define_ext_module(
    name = "connadp",
    srcs = glob([
        "*.c",
        "**/*.h",
        "Kbuild",
        "Makefile",
    ])
)
