load("//xring-modules:define_ext_modules.bzl", "define_ext_module")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

filegroup(
    name = "headers",
    srcs = glob([
        "**/*.h",
    ]),
)


filegroup(
    name = "sources",
    srcs = glob(
        ["**"],
        exclude = [
            "**/.*",
            "**/.*/**",
            "**/BUILD.bazel",
            "**/*.bzl",
        ],
    )
)

define_ext_module(
    name = "conninfra",
    srcs = glob(
        ["**"],
        exclude = [
            "**/.*",
            "**/.*/**",
            "**/BUILD.bazel",
            "**/*.bzl",
        ],
    )
)
